[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/objects/saw.png" type="Texture" id=1]
[ext_resource path="res://src/objects/moving_saw.gd" type="Script" id=2]
[ext_resource path="res://src/objects/static_saw.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Saw/Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Saw/Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 2.5, 2.5 )

[node name="MovingSaw" type="Node2D"]
script = ExtResource( 2 )

[node name="Saw" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Saw"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Saw"]
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Saw"]
root_node = NodePath("../..")
autoplay = "idle"
anims/RESET = SubResource( 2 )
anims/idle = SubResource( 3 )

[node name="FirstPoint" type="Area2D" parent="."]
position = Vector2( 0, -24 )
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="FirstPoint"]
shape = SubResource( 4 )

[node name="SecondPoint" type="Area2D" parent="."]
position = Vector2( 0, 24 )
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="SecondPoint"]
shape = SubResource( 4 )

[connection signal="area_entered" from="Saw" to="." method="_on_area_entered"]
